# customer-welding-app

./: .gitignore  README.md  generate_hash.py  groundlight-app.yaml  pyproject.toml  run.py
.github/workflows/: weld-app.yaml
tests/: conftest.py  test_backend.py
weld/: __init__.py  app.py  backend.py  config.py
weld/static/scripts/: jig-lock.js  loading.js  print.js  process.js  review.js  start-shift.js  start-welding.js
weld/static/styles/: styles.css
weld/templates/: footer.html  header.html  index.html  part.html  print.html  process.html  review.html  script.html
