[tool.poetry]
name = "customer-welding-app"
version = "0.1.0"
description = "Weld Count Checking and Tag Printing App"
authors = ["Harry Tung <harry@groundlight.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
framegrab = "^0.8.0"
groundlight = "^0.21.1"
opencv-python = "4.9.0.80"
flask = "^3.1.0"
numpy = "1.26.4"
rpi-gpio = { version = "^0.7.1", markers = "sys_platform == 'linux'" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
